Multiple fixes: Tom's reference to text being italicized when entered after an icon (added a space to the end of the tag and swapped non-breaking spaces with zero width spaces); Story 84342770 (dropdown width not expanding to text width); Fixed dropdowns being cutoff; Story 84337384 (bullets appearing twice in WYSIWYG layout); Story 84341804 (bullet styles not carrying over); Story 84342662 (cog wheels behind banner);

--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -7,6 +7,9 @@ header {
 .navbar-default {
 	background-color: rgba(255, 255, 255, 0.95);
 	border-bottom: 1px solid @gray-light;
+	height: auto;
+	overflow: visible;
+	z-index: 99;
 	color: @gray;
 	.navbar-nav {
 		> li {
@@ -306,4 +309,27 @@ header {
 			}
 		}
 	}
+}
+
+.nav, .collapse, .dropup, .dropdown {
+  position: static;
+}  
+
+.dropdown-menu {
+  left: auto;
+  width: auto;
+}
+/* This enables hover dropdowns */
+.dropdown:hover .dropdown-menu {
+  display: block;
+  z-index: 99;
+  white-space: nowrap;
+}
+.dropdown:hover .dropdown-menu > li > a {
+  width: auto;
+  white-space: nowrap;
+}
+.nav.navbar-right .dropdown-menu {
+  left: auto;
+  right: 0;
 }
